@@ -254,7 +254,6 @@ int name_to_gid(char *name, gid_t *gid);
 int lock_range(int fd, int offset, int len);
 void glob_expand(char *base1, char **argv, int *argc, int maxargs);
 void strlower(char *s);
-void *Realloc(void *p, int size);
 void clean_fname(char *name);
 void sanitize_path(char *p, char *reldir);
 char *push_dir(char *dir, int save);
@@ -265,4 +264,6 @@ char *timestring(time_t t);
 int msleep(int t);
 int cmp_modtime(time_t file1, time_t file2);
 int _Insure_trap_error(int a1, int a2, int a3, int a4, int a5, int a6);
+void *_new_array(unsigned int size, unsigned long num);
+void *_realloc_array(void *ptr, unsigned int size, unsigned long num);
 int sys_gettimeofday(struct timeval *tv);
